re PR objc++/28434 (ICE with invalid protocol)

PR obj-c++/28434
	* objc-act.c (lookup_and_install_protocols): Skip error_mark_nodes.

	* obj-c++.dg/proto-error-1.mm: New test.

From-SVN: r115599