gcc/testsuite/obj-c++.dg/proto-error-1.mm
@@ -1,0 +1,4 @@
+// PR obj-c++/28434
+// { dg-do compile }
+
+Class<> c;  // { dg-error "identifier" }
